--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
     "description": "TimeZeroPW client",
     "author": "ravoit",
     "license": "MIT",
-    "version": "1.0.6",
+    "version": "1.0.15",
     "main": "./main.js",
-
     "scripts": {
         "run": "electron .",
-        "publish": "build -p always"
+        "publish": "electron-builder build -p always"
     },
     "build": {
         "appId": "pw.timezero",
@@ -25,16 +24,18 @@
                     ]
                 }
             ]
-        }
+        },
+        "compression": "maximum"
     },
     "devDependencies": {
-        "electron": "^4.1.3",
-        "electron-builder": "^20.39.0"
+        "electron": "latest",
+        "electron-builder": "latest"
     },
     "dependencies": {
-        "electron-store": "^3.1.0",
-        "electron-updater": "^4.0.6",
-        "finalhandler": "^1.1.1",
-        "serve-static": "^1.13.2"
+        "custom-electron-titlebar": "^3.1.0",
+        "electron-store": "latest",
+        "electron-updater": "^4.0.0",
+        "finalhandler": "latest",
+        "serve-static": "latest"
     }
 }
