--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "electron-store": "latest",
         "electron-updater": "^4.0.0",
         "finalhandler": "latest",
-        "serve-static": "latest"
+        "serve-static": "latest",
+        "swfobject": "^2.2.1"
     }
 }
