--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "timezeropw-client",
+  "name": "timezeropw",
   "description": "TimeZeroPW client",
   "author": "ravoit",
   "license": "MIT",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "main": "./main.js",
   "scripts": {
     "run": "electron .",
