--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "TimeZeroPW client",
   "author": "ravoit",
   "license": "MIT",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "main": "./main.js",
   "scripts": {
     "run": "electron .",
@@ -24,15 +24,14 @@
           ]
         }
       ]
-    },
+    }
   },
   "devDependencies": {
-    "electron": "latest",
-    "electron-builder": "latest"
+    "electron": "^6.0.0",
+    "electron-builder": "^22.1.0"
   },
   "dependencies": {
-    "custom-electron-titlebar": "^3.1.0",
-    "electron-store": "latest",
+    "electron-store": "^5.1.0",
     "electron-updater": "^4.0.0",
     "finalhandler": "latest",
     "serve-static": "latest",
