--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_cache:
 
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash
-
+  - export PATH="$HOME/.yarn/bin:$PATH"
 addons:
   apt:
     sources:
